more updates, seems to work now with mongoid

--- a/app/views/rails_admin/main/import.html.erb
+++ b/app/views/rails_admin/main/import.html.erb
@@ -21,7 +21,7 @@
           <li><%= field %></li>
         <% end -%>
         </ul>
-        <p class="help-block">The following fields may be included in the import file.</p>
+        <p class="help-block">This fields may be included in the import file.</p>
       </div>
     </div>
     <% if @abstract_model.model.belongs_to_fields.any? -%>
